--- a/package/game/translation/en.json
+++ b/package/game/translation/en.json
@@ -1,5 +1,5 @@
 {
-    "startnew": "Start New Game",
+    "startnew": "apcb",
     "new": "Starting a new game...",
     "startload": "Load Game",
     "loads": "Loading game from ",
